--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <!-- Directions:
         Put your three image tags here.
     -->
+    <img src="farsight-glarynight-2.jpg" atl="glary city view at night">
+    <img src="waterbridge-night2.jpg" atl="upfront bridgecity view at night">
+    <img src="towernight-waterlight2.jpg" atl="night view of city lights and water">
   </body>
 </html>
