--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+    
+      img {
+        width: 100%;
+      }
+      
+    </style>
+  </head>
   <body>
     <!-- Directions:
         Put your three image tags here.
